deploy/kustomize/services/fx-rates/overlays/preview/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fx-rates
spec:
  ingressClassName: traefik
  rules:
    # The ApplicationSet patches this host to pr-<number>.fx-rates.127.0.0.1.nip.io
    - host: preview.fx-rates.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fx-rates
                port:
                  name: http
